# openstack-ansible-os_refstack

./: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/user/: usage.rst
examples/: playbook.yml
meta/: main.yml  openstack-ansible.yml
tasks/: main.yml  refstack_install.yml  refstack_install_source.yml
vars/: distro_install.yml  main.yml  redhat-7.yml  source_install.yml  suse.yml  ubuntu.yml
zuul.d/: project.yaml
