[metadata]
name = openstack-ansible-os_refstack
summary = os_refstack for OpenStack Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-ansible-os_refstack/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/os_refstack/defaults = defaults/*
    share/ansible/roles/os_refstack/meta = meta/*
    share/ansible/roles/os_refstack/tasks = tasks/*
    share/ansible/roles/os_refstack/templates = templates/*
    share/ansible/roles/os_refstack/files = files/*
    share/ansible/roles/os_refstack/vars = vars/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
